tests/fixtures/invalid/pow_str_str_none.py
# Cannot call pow() with Str, Str, None
x = pow("hello", "hello", None)
